--- a/aula_3_algebra_aplicada.ipynb
+++ b/aula_3_algebra_aplicada.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hDBv1Hhp_VJP",
-        "outputId": "83a03daa-07fe-4203-e57f-fc27da5a3a73"
+        "outputId": "d2cfbd03-86cd-4b53-cbdb-60a9d74d550b"
       },
       "outputs": [
         {
@@ -33,7 +33,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 56
         }
       ],
       "source": [
@@ -53,30 +53,30 @@
       "cell_type": "code",
       "source": [
         "# criando uma identidade de ordem 426\n",
-        "R = np.eye(426)\n",
+        "P = np.eye(426)\n",
         "# zerando as 142 primeiras linhas de I\n",
-        "R[:142,:] = 0\n",
+        "P[:142,:] = 0\n",
         "# zerando as últimas 142 linhas de I\n",
-        "R[426-142:,:] = 0"
+        "P[426-142:,:] = 0"
       ],
       "metadata": {
         "id": "lFxy3YDq_yT3"
       },
-      "execution_count": 21,
+      "execution_count": 57,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Multiplicando as camadas de M por R\n",
-        "M[:,:,0] = np.matmul(R, M[:,:,0])\n",
-        "M[:,:,1] = np.matmul(R, M[:,:,1])\n",
-        "M[:,:,2] = np.matmul(R, M[:,:,2])"
+        "M[:,:,0] = np.matmul(P, M[:,:,0])\n",
+        "M[:,:,1] = np.matmul(P, M[:,:,1])\n",
+        "M[:,:,2] = np.matmul(P, M[:,:,2])"
       ],
       "metadata": {
         "id": "G5QiNpNJAmdH"
       },
-      "execution_count": 22,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -93,9 +93,9 @@
           "height": 248
         },
         "id": "aFJ_W19eA5L_",
-        "outputId": "39f8e551-be97-4fe8-cd0d-2f539a4a3780"
+        "outputId": "68736ebc-3b2f-4c99-cfb0-73ea7d4283ee"
       },
-      "execution_count": 23,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "display_data",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FSjWAmD-BEGH",
-        "outputId": "fae36b9a-f9a3-4e22-f07f-b958019accee"
+        "outputId": "425afdce-4ac3-4164-fcd7-f0a9406aed24"
       },
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,29 +141,29 @@
     {
       "cell_type": "code",
       "source": [
-        "R = np.eye(854) \n",
-        "R[122:244,:] = 0 \n",
-        "R[366:488,:] = 0\n",
-        "R[610:732,:] = 0\n",
+        "P = np.eye(854) \n",
+        "P[122:244,:] = 0 \n",
+        "P[366:488,:] = 0\n",
+        "P[610:732,:] = 0\n",
         "I = np.eye(854)"
       ],
       "metadata": {
         "id": "PHpGDNnIIlYY"
       },
-      "execution_count": 48,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for i in [0, 1, 2]:\n",
-        "  B[:,:,i] = np.matmul(R, B[:,:,i])\n",
-        "  G[:,:,i] = np.matmul(I - R, G[:,:,i])"
+        "  B[:,:,i] = np.matmul(P, B[:,:,i])\n",
+        "  G[:,:,i] = np.matmul(I - P, G[:,:,i])"
       ],
       "metadata": {
         "id": "1kTv8OL6JXSf"
       },
-      "execution_count": 49,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -179,9 +179,9 @@
           "height": 248
         },
         "id": "jndntvOJJwTI",
-        "outputId": "30d80148-2dcb-4638-91d8-eba17b05fdf2"
+        "outputId": "9ddeb736-362e-4c5c-fac0-45455c12ee2c"
       },
-      "execution_count": 50,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
