feat: add aula 02

--- a/aula_01_algebra_aplicada.ipynb
+++ b/aula_01_algebra_aplicada.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "array([ 0,  0,  4, 19])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "id": "sIe42hu2cmvb"
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "id": "s8z6BKo0cric"
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "       [ 1,  1]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "       [ 1,  3]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "id": "s87et85-iOJj"
    },
@@ -520,6 +520,54 @@
    "metadata": {},
    "source": [
     "<b>Exercício 2:</b> Faça uma redução de 30% de verde e 30% de azul na imagem no arquivo <i>sunset.png</i>. Mostre o resultado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Exercício 3:</b> O filtro sépia dá uma aspecto envelhecido à imagem. Aplique o filtro sépia a imagem no arquivo <i>robo_elfo.jpg</i>, para isso, use as seguintes fórmulas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_Red = (Red * .393) + (Green *.769) + (Blue * .189)\n",
+    "new_Green = (Red * .349) + (Green *.686) + (Blue * .168)\n",
+    "new_Blue = (Red * .272) + (Green *.534) + (Blue * .131)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Dica:</b> Para usar a mesma lógica que usamos no último exemplo prático precisaremos manter as entradas das novas matrizes entre zero e um. Para fazer isso, use a função clip da biblioteca numpy. Veja um exemplo de como a função funciona:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 0. ],\n",
+       "       [1. , 0. ],\n",
+       "       [0.5, 0.6]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1.5,-0.5],[3,-2],[0.5,0.6]])\n",
+    "np.clip(A,0,1)"
    ]
   },
   {
